# precision_stack

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: further-reading.md  glossary.md  index.md
docs/case-studies/: alzheimers.md  epilepsy.md  index.md  oncology.md
docs/foundations/: bias-and-confounding.md  data-modalities.md  index.md  patient-heterogeneity.md
docs/getting-started/: index.md  patient-trajectory.md  what-ai-can-answer.md  what-is-precision-medicine.md
docs/methods/: causal-inference.md  evaluation.md  index.md  survival-analysis.md  unsupervised-subtyping.md
docs/regulatory/: consort-spirit.md  decide-ai.md  fda-pathways.md  index.md
docs/tasks/: adaptive-trials.md  clinical-decision-support.md  index.md  risk-prediction.md  stratification.md  synthetic-controls.md  treatment-response.md  trial-matching.md
src/precision_handbook/: __init__.py
tests/: test_smoke.py
