[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "precision-handbook"
version = "0.1.0"
description = "PrecisionStack — the open precision-medicine and clinical-trials handbook."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "PrecisionStack contributors" }]
keywords = ["precision-medicine", "clinical-trials", "causal-inference", "survival-analysis", "biostatistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-material-extensions>=1.3",
    "pymdown-extensions>=10.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
stats = [
    "lifelines>=0.27",
    "statsmodels>=0.14",
]

[project.scripts]
precision-handbook = "precision_handbook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/precision_handbook"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
